[package]
name = "vibe-engine"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A compact cross-platform OpenGL 3D game engine prototype with a procedural space shooter demo."
default-run = "vibe-engine"

[[bin]]
name = "vibe-engine"
path = "src/main.rs"

[[bin]]
name = "vibe-editor"
path = "src/bin/vibe_editor.rs"

[[bin]]
name = "vibe-launcher"
path = "src/bin/vibe_launcher.rs"

[[bin]]
name = "vibe-web"
path = "src/bin/vibe_web.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cgmath = "0.18"
glium = { version = "0.36", features = ["glutin", "simple_window_builder"] }
rand = "0.8"
rodio = "0.17"
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow", "persistence", "wayland", "x11"] }
rfd = "0.14"

[target.'cfg(target_arch = "wasm32")'.dependencies]
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow", "persistence"] }
console_error_panic_hook = "0.1"
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlCanvasElement"] }
